# l2d_viewer

./: CMakeLists.txt  README.md
patches/: CubismNativeSamplesBridge.cpp.example  PATCH_NATIVE_BRIDGE.ko.md
scripts/: configure_native.ps1  fetch_imgui.ps1  fetch_imgui.sh  find_cubism_core.ps1
src/: main.cpp
src/app/: AppState.cpp  AppState.hpp  GuiApplication.cpp  GuiApplication.hpp  UndoManager.cpp  UndoManager.hpp
src/backends/: BackendFactory.cpp  CubismNativeBackend.cpp  CubismNativeBackend.hpp  CubismNativeSamplesBridge.cpp  ILive2DBackend.hpp  MockBackend.cpp  MockBackend.hpp
src/cubism_shim/: LAppDelegate.hpp  LAppDelegateShim.cpp  LAppPal.cpp
src/export/: FrameExporter.cpp  FrameExporter.hpp
src/gui/: ConsoleLog.cpp  ConsoleLog.hpp  ExportDialogs.cpp  ExportDialogs.hpp  MainGui.cpp  MainGui.hpp
src/render/: ModelScanner.cpp  ModelScanner.hpp  ViewportCamera.cpp  ViewportCamera.hpp
src/util/: CrashDiagnostics.cpp  CrashDiagnostics.hpp  NativeDialogs.cpp  NativeDialogs.hpp  PathUtil.cpp  PathUtil.hpp  ProcessPipe.cpp  ProcessPipe.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp  StreamRedirector.hpp
